# etw-rs

./: .gitignore  LICENSE-MIT  README.md
crates/etw/: Cargo.toml
crates/etw/src/: error.rs  lib.rs  main.rs  provider.rs  serde.rs  tdh_wrappers.rs  trace.rs  trace_session.rs  windows.rs
crates/etw/src/schema/: cache.rs  in_type.rs  mod.rs  out_type.rs
crates/etw/src/values/: compound.rs  event.rs  in_value.rs  misc.rs  mod.rs  primitives.rs  strings.rs  value.rs
crates/etw/tests/: test_recorded_dns_wininet.rs
crates/etwschema/: Cargo.toml
crates/etwschema/src/: args.rs  main.rs
