[package]
name = "etw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde", "unchecked_cast", "json_schema"]
serde = ["dep:serde"]
json_schema = [ "dep:schemars", "serde" ]
# Convert POD types through pointer cast.
# Doesn't check alignment.
unchecked_cast = []

[dependencies]
clap = {version = "4", features = ["cargo"]}
regex = "1"
once_cell = "1"
thiserror = "1"
serde = { version = "1.0.152", features = ["derive"], optional = true }
log = "0.4.17"
bitflags = "2.2.1"
memoffset = "0.8.0"
bytemuck = "1.13.1"
lazycell = "1.3.0"
time = { version = "0.3.21", features = ["alloc", "std", "serde"] }
static_assertions = "1.1.0"
encoding_rs = "0.8.34"
schemars = {version = "=1.0.0-alpha.15", features = ["derive", "uuid1"], optional = true}

[dependencies.windows]
version = "0.58"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Time",
    "Win32_System_Threading",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
]

[dev-dependencies]
env_logger = "*"
