[package]
name = "etwschema"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
etw = {path = "../etw"}
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.3"
uuid = {version = "1.11.0", features = ["std", "serde"] }
